feat: Implement core climate data model and UI components
- Add ClimateData, Country, Metric, and ComparisonLine records to represent climate statistics and country information.
- Create ClimateService for fetching climate data and CountryRepository for managing country data.
- Develop App class for the main application UI, including country selection and climate comparison features.
- Introduce CountryPicker for user-friendly country selection with filtering capabilities.
- Implement EnvLoader for reading configuration from .env files and environment variables.
- Add CSS styles for UI components to enhance visual presentation.
- Create unit tests for ClimatiqApiClient, WeatherApiClient, CountryRepository, ClimateComparator, and EnvLoader to ensure functionality and reliability.
- Include a CSV file with country names and ISO codes for data population.